Enable preview feature in Java 17