@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id "com.diffplug.spotless" version "6.7.2"
+	id 'eclipse'
 }
 
 group = 'tokyo.yabaitech'
@@ -11,6 +12,12 @@ sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+}
+compileJava {
+	options.compilerArgs += ["--enable-preview"]
+}
+compileTestJava {
+	options.compilerArgs += ["--enable-preview"]
 }
 
 dependencies {
@@ -33,4 +40,13 @@ spotless {
 	java {
 		googleJavaFormat('1.15.0').aosp().reflowLongStrings()
 	}
+}
+
+eclipse.jdt.file.withProperties { props ->
+	props['org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures']= 'enabled'
+	props['org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures']= 'ignore'
+}
+
+test {
+	jvmArgs '--enable-preview'
 }
